# playbacQ

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.worker  LICENSE  README.md  config.json  config.test.json  config.yaml  docker-compose.test.yml  docker-compose.worker.yml  docker-compose.yml  main.cpp
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
controllers/: Status.h  api_auth.cpp  api_auth.h  api_comments.cpp  api_comments.h  api_tag.cpp  api_tag.h  api_videos.cpp  api_videos.h  share.cpp  share.h  webhooks_minio.cpp  webhooks_minio.h  websocket_comments.cpp  websocket_comments.h
docker/: init.sql  init.test.sql
docker/minio/: init.sh
docs/: openapi.yml  schema.md
filters/: AuthFilter.cpp  AuthFilter.h
models/: Comments.cc  Comments.h  Tags.cc  Tags.h  VideoLikes.cc  VideoLikes.h  VideoTags.cc  VideoTags.h  Videos.cc  Videos.h  model.json
plugins/: S3Plugin.cpp  S3Plugin.h  Token.cpp  Token.h
src/: api_comments.cpp  api_comments.h  api_videos.cpp  api_videos.h  main.cpp
test/: CMakeLists.txt  config.json  controllers.cpp  test_main.cc
worker/: worker.cpp
